# calm

./: .gitignore  AGENTS.md  ARCH.md  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  PROMPT.md  README.md  SPEC.md  TODO.md  eval_smart_mode.py  main.py  patch_daemon5.py  patch_daemon6.py  patch_daemon7.py  pyproject.toml
.github/workflows/: build-and-publish.yml  release.yml
benchmarks/: bench.py
calm/: cli.py  config.py  platform_support.py  service.py
calmd/: __main__.py  daemon.py  prompts.py  protocol.py
calmd/backend/: interface.py  mlx_backend.py
packaging/homebrew/: calm.rb  calm.rb.tmpl  example-build-sdist.calm.rb  example-use-wheel.calm.rb  generate-calm-formula.py
scripts/: bench_cache.py
tests/: conftest.py  eval_conformance.py  eval_smart_mode.py  test_cli_history.py  test_interactive_features.py  test_prefill_conformance.py  test_sanitize_model_generation.py  test_service.py  test_warmup_race.py
