[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "calm"
version = "0.2.0"
description = "[C]alm [A]nswers via (local) [L]anguage [M]odels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-lm>=0.31.0",
]

[project.scripts]
calm = "calm.cli:main"
calmd = "calmd.daemon:main"

[tool.uv.build-backend]
module-name = ["calm", "calmd", "calmd.backend"]
module-root = ""

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
